# ispa-parser

./: .gitignore  .gitmodules  AST  CMakeLists.txt  CMakePresets.json  CircularDependency.py  Expr_parser.cpp  Expr_parser.h  LICENSE  Parser.cpp  Parser.h  Parser_new.h  README.md  build-auto.sh  build.cmake   build.sh  build_err.txt  canonical_collection  canonical_collection.txt  chat_2024_09_28_15_54_47.md  conf.cmake  dfa  download_cpuf.sh  find_occurences.py  first  first_set  first_set.txt  fn.cmake  follow  follow_set  follow_set.txt  lines.py  nfa  output.cpp  output.h  output.txt  output_ir.txt  prepare.sh  prepare_boost.bat  push.sh  (+13 more)
.github/workflows/: cmake-multi-platform.yml
IR/: LLIR_old.cpp  LLIR_old.h  debug.cpp  optimizations.cpp
build-agent/: compiler-test.cpp  os.sh
cmake/: conf  cpuf_modules  fn
concept/: customtree.isccpp  instance.isc  modifiers.isc
concept/project-management/: expr.isc  json.isc  main.isc
concepts/: convertion  ir-convertion
concepts/output-example/: Parser.cpp  Parser.h  expr.isc  test.cpp
converters/: Converter.cppm  Declarations.cppm  Indentation.cppm  Init.cppm  NameManager.cppm  Statement.cppm  Type.cppm  Writer.cppm  converter_base.cppm  converter_base.h
converters/C++/: DFA.cpp  DFA.cppm  DFASpans.cpp  DFASpans.cppm  DFATypes.cpp  DFATypes.cppm  LLConverter.cpp  LLConverter.cppm  LLConverter.h  LLHeader.cpp  LLHeader.cppm  LLHeader.h  LLInternalData.cppm  LLInternalData.h  LLStringConvertions.cpp  LLStringConvertions.cppm  LLStringConvertions.h  LLheader.cpp  LRConverter.cpp  LRConverter.cppm  LRConverter.h  LRHeader.cpp  LRHeader.cppm  LRHeader.h  LRInternalData.cppm  LRInternalData.h  LexerConverter.cpp  LexerConverter.cppm  StateArrayBuilder.cpp  StateArrayBuilder.cppm  buildLLParser.cpp  buildLLParser.cppm  converter.cpp  converter.h  header.cpp
converters/C++2/: CoreFunctions.cpp  CoreFunctions.cppm  Declarations.cpp  Declarations.cppm  Init.cpp  Init.cppm  Statement.cpp  Statement.cppm
custom_grammars/Cpp/: Parser.cpp  Parser.h  decltype.isc  expression.isc  initList.isc  literal.isc  main.isc  namespace.isc  tokens.isc  tree.txt  treeAPI.txt  typeName.isc
include/: CLI.cppm  CLI11.hpp  args.h  convertion.h  corelib.h  debug.h  defs.h  dll_export.h  exe_export.h  hash.cppm  hash.h  init.h  internal_types.h  logging.h  main.h  parser.h  parser_defs.h  pragma.h  progress.h  relativePath.h  token_management.h  tracer.h  types.cppm
include/args/: args.h
include/core/: file.h  text.h  tokens.h
include/debug/: logging.h  tracer.h
include/main/: convertion.h  internal_types.h  main.h  progress.h
include/parser/: parser.h  parser.ixx  parser_defs.h
lib/: iscstdlibc++.h
lib/cpuf/: c_string  cdevinfo  color  constexpr  devinfo  devinfo.h  dlib  hex  let  versions  warning  worktime
parser/: .build  CMakeLists.txt  Parser.cpp  Parser.cppm  Parser.h  README.md  Rule.isc  accessors.isc  dataTypes.isc  parser.isc  preproc.isc
parser/CLL/: TODO  cll.isc  clldoc  dblog.sample  loops.isc
parser/CLL/common/: block.isc  operators.isc  template.isc  type.isc
parser/CLL/condition/: if.isc  ternary.isc
parser/CLL/expr/: expr.isc
parser/CLL/function/: function.isc
parser/CLL/variable/: method.isc  refer.isc  var.isc
parser/include/: parser.h
parser/parser/: .build  Rule.isc  cll.isc  clldoc  dataTypes.isc  manual_tokens.isc  modules.isc  parser.isc  rule.isc
parser/parser/CLL/: cll.isc  loops.isc
parser/parser/CLL/common/: block.isc  operators.isc  template.isc  type.isc
parser/parser/CLL/condition/: if.isc
parser/parser/CLL/expr/: expr.isc
parser/parser/CLL/function/: function.isc
parser/parser/CLL/variable/: method.isc  refer.isc  var.isc
parser/parser/new/: Rule.isc  cll.isc  clldoc  dataTypes.isc  literals.isc  parser.isc
parser/parser/old/: Rule.isc  cll.isc  dataTypes.isc  parser.isc
parser/preproc/: preproc.isc
parser/src/: Rule.cpp  accessors.cpp  dataTypes.cpp  end.cpp  parser.cpp
parser/src/CLL/: cll.cpp  loops.cpp
parser/src/CLL/common/: block.cpp  operators.cpp  template.cpp  type.cpp
parser/src/CLL/condition/: if.cpp  ternary.cpp
parser/src/CLL/expr/: expr.cpp
parser/src/CLL/function/: function.cpp
parser/src/CLL/variable/: method.cpp  refer.cpp  var.cpp
parser/src/Rule/: bin.cpp  csequence.cpp  data_block.cpp  group.cpp  hex.cpp  nested_rule.cpp  op.cpp  other.cpp  qualifier.cpp  rule.cpp
parser/stdlibs/: iscstdlibc++.cpp  iscstdlibc++.h  ispastdlib.cppm  ispastdlib.hpp  ispastdlibcpp.cppm
parser/stdlibs/old/: iscstdlibc++.h  ispastdlib.hpp
parser/tests/: Rule.cpp  complete_test.cpp  ternary.cpp
parser/tests/files/: cll_var  expr2
release-scripts /: install.bat  install.sh  uninstall.bat  uninstall.sh
scripts/: args.sh  compile-options.sh  cpu.sh  cpuid.c  dependecies.sh  find_compiler.sh  find_generator.sh  find_linker.sh  find_llvm_ld.sh  fun.sh  os.sh
scripts/mod/: cpuid.c
scripts/tests/: compiler-test.cpp
src/: AST.cpp  AST.cppm  AST.h  ASTPass.cpp  ASTPass.cppm  DFA.cpp  DFA.cppm  DFABuilder.cpp  DFABuilder.cppm  DFAS.cpp  DFAS.cppm  Dump.cpp  Dump.cppm  ELRParser.cpp  ELRParser.cppm  ELRParser.h  FCDT.cpp  FCDT.cppm  IR-debug.cpp  IR-debug.h  IR-optimizations.cpp  IR-optimizations.h  IR.cpp  IR.h  LALRParser.cpp  LALRParser.cppm  LALRParser.h  LRParser.cpp  LRParser.cppm  LRParser.h  LangAPI.cpp  LangAPI.cppm  LexerBuilder.cpp  LexerBuilder.cppm  NFA.cpp  NFA.cppm  Rule.cpp  Rule.cppm  TreeAPI.cpp  TreeAPI.cppm  (+49 more)
src/AST/: API.cpp  API.cppm  Builder.cpp  Builder.cppm  Tree.cpp  Tree.cppm  TreePass.cpp  TreePass.cppm  types.cppm
src/CLL/: cll.cpp  cll.cppm  loops.cpp
src/DFA/: API.cpp  API.cppm  Base.cpp  MDFA.cpp  (+22 more)
stdlibs/: deprecated.h   iscstdlibc++.cpp  iscstdlibc++.h
tests/: IR-convertion-group.cpp  IR-convertion-group.isc  IR-skip-spaces.isc  LALRtest.isc  LRtest.isc  LRtest2.isc  LRtest3.isc  accessor.isc  accessors.cpp  cll.cpp  complete_test.cpp  expr.cpp  group-variable-type.isc  hex-bin.isc  if.cpp  inline-accessor-if-test.isc  inline-test.isc  insideLoop.isc  lib.h  loop.cpp  method_call.cpp  test.cpp  tester.cpp
(+203 files in other folders)
